# ai-support-and-billing-operations-hub

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_knowledge.py  0003_ai_audit.py  0004_billing.py  0005_pgvector.py  0006_copilot_conversations.py
backend/app/: __init__.py  main.py
backend/app/ai/: guardrails.py  prompts.py  tools.py
backend/app/api/: deps.py  router.py
backend/app/commands/: backfill_embeddings.py  seed.py
backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/integrations/: llm_client.py  stripe_client.py
backend/app/models/: __init__.py  ai_audit_log.py  conversation.py  customer.py  enums.py  invoice.py  knowledge_article.py  knowledge_chunk.py  payment.py  plan.py  ticket.py  user.py  webhook_event.py
backend/app/repositories/: ai_repository.py  billing_repository.py  conversation_repository.py  customer_repository.py  knowledge_repository.py  ticket_repository.py  user_repository.py
backend/app/schemas/: ai.py  billing.py  common.py  customer.py  knowledge.py  ticket.py  user.py
backend/app/services/: ai_service.py  billing_service.py  (+7 more)
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_billing.py  test_copilot.py  test_copilot_ws.py  test_customers.py  test_dashboard.py  test_guardrails.py  test_health.py  test_knowledge.py  test_rag.py  test_tickets.py  test_users.py
(+50 files in other folders)
