[project]
name = "supportledger-backend"
version = "0.1.0"
description = "SupportLedger AI - FastAPI backend for support and billing operations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "stripe>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: FastAPI relies on function calls (Depends/Query) in argument defaults.
# UP046: keep classic Generic[T] for broad Pydantic generic-model compatibility.
ignore = ["B008", "UP046"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
# Seed data is a readable table of demo records; line length is not meaningful here.
"app/commands/seed.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
